src/mcp/test/fixtures/valid/config-tsconfig-strict.fixture.ts
/**
 * @fixture valid
 * @rule config-enforcement
 * @description Valid TSConfig with strict settings enabled
 * @expectedViolations 0
 * @simulatedPath tsconfig.json
 */
{"compilerOptions": {"strict": true, "noUnusedLocals": true, "noUnusedParameters": true}}
